--- a/web/css/style.css
+++ b/web/css/style.css
@@ -83,13 +83,13 @@ img{max-width:100%;}
 	-webkit-transition: 0.5s ease;
 }
 .top-nav li.active> a, .top-nav li> a:hover {
-	border-top: 5px solid #665cbe;
-	color: #665cbe;
+	border-top: 5px solid #22be2a;
+	color: #22be2a;
 }
 /*---End-header---*/
 /*---content----*/
 .grid1{
-	background:#665cbe;
+	background: #22be2a;
 	text-align:center;
 	padding: 50px 0px;
 }
@@ -169,7 +169,7 @@ img{max-width:100%;}
 	-webkit-transition: 0.5s ease;
 }
 .grid2 ul li a:hover{
-	color:#665cbe;
+	color:#22be2a;
 }
 /*----grid3-----*/
 .grid3{
@@ -235,7 +235,7 @@ img{max-width:100%;}
 	font-family: 'gandhi_sansregular';
 	color: #FFFFFF;
 	margin-top: 12px;
-	background: #665cbe;
+	background: #22be2a;
 	display: inline-block;
 	padding: 15px 32px;
 	text-transform: uppercase;
@@ -275,7 +275,7 @@ img{max-width:100%;}
 }
 /*---contact----*/
 .contact{
-	background: #665cbe;
+	background: #22be2a;
 	text-align: center;
 	padding: 50px 0px;
 }
@@ -379,7 +379,7 @@ img{max-width:100%;}
 	text-transform: uppercase;
 }
 .footer p a{
-	color:#665cbe;
+	color:#22be2a;
 	transition: 0.5s ease;
 	-o-transition: 0.5s ease;
 	-webkit-transition: 0.5s ease;
